# hf_agents

./: .gitignore  Makefile  README.md  pyproject.toml
first_agent/: Gradio_UI.py  __main__.py  context_tools.py  first_agent.py  prompts.yaml
first_agent/tools/: final_answer.py  visit_webpage.py  web_search.py
scripts/: 00_query.py
tests/: test_editor.py
tools/: editor.py  testing.py
