[project]
name = "hf-ai-agents-course"
version = "0.1.0"
description = "Stub project for Hugging Face AI Agents course"
authors = [{ name = "HuggingFace Inc.", email = "courses@huggingface.co" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "duckduckgo-search>=7.4.2",
    "gradio-client>=1.7.0",
    "ipykernel>=6.29.5",
    "markdownify>=0.14.1",
    "requests>=2.32.3",
    "smolagents[gradio]",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "uv>=0.6.1",
]
