[project.scripts]
first_agent = 'first_agent:first_agent.main'

[project]
name = 'hf-ai-agents-course'
version = '0.1.0'
description = 'Stub project for Hugging Face AI Agents course'
authors = [{ name = 'github.com/cybergrind' }]
license = { text = 'Apache-2.0' }
requires-python = '>=3.13'
dependencies = [
  'beautifulsoup4>=4.13.3',
  'duckduckgo-search>=7.4.2',
  'gradio-client>=1.7.0',
  'ipykernel>=6.29.5',
  'markdownify>=0.14.1',
  'requests>=2.32.3',
  'smolagents[gradio,e2b]',
]

[dependency-groups]
dev = [
    'ipython>=8.32.0',
    'pre-commit>=4.1.0',
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    'uv>=0.6.1',
]

[tool.ruff]
line-length = 120
target-version = 'py313'
indent-width = 4
exclude = ['.venv', '.git']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
ignore = [
  'T201', # print
  'G004', # logging format
  'Q000', # quotes
  'Q001', # quotes
  'Q003', # quotes
]
fixable = ['ALL']
select = [
  'E',     # pycodestyle
  'F',     # pyflakes
  'I',     # isort
  'G',     # flake8-logging-format
  'ASYNC', # flake8-async
  'PIE',   # flake8-pie
  'T20',   # flake8-print
  'PT',    # flake8-pytest-style
  'Q',     # flake8-quotes
  'RUF',
]
exclude = ['alembic/*']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
norecursedirs = ['.git', '.venv']
addopts = '--tb=short -s'
testpaths = ['tests']
